--- a/mysite/myapp/templates/base.html
+++ b/mysite/myapp/templates/base.html
@@ -12,6 +12,35 @@
     {% endblock %}
   </head>
   <body>
+    <div class="top-bar">
+      <div class="top-bar-left">
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li class="menu-text">Suggester</li>
+          <!-- <li>
+            <a>One</a>
+            <ul class="menu vertical">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </li> -->
+          <li><a href="/">Home</a></li>
+        </ul>
+      </div>
+      <div class="top-bar-right">
+        <ul class="menu">
+          {% if user.is_authenticated %}
+          <!-- <li><a href="/accounts/">{{ user.username }}</a></li> -->
+          <!-- <li><a href="/suggestion/">Add Suggestion</a></li> -->
+          <li><a href="/logout/">Logout</a></li>
+          {% else %}
+           <!-- <li><a href="/register/">Register</a></li> -->
+          <li><a href="/login/">Log In</a></li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+
   {% block content %}
   {% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
